--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "vue-tsc": "^2.0.24"
     },
     "dependencies": {
-        "aos": "^2.3.4"
+        "aos": "^2.3.4",
+        "vue-i18n": "^10.0.5"
     }
 }
