--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@rushstack/eslint-patch": "^1.8.0",
         "@tailwindcss/forms": "^0.5.3",
         "@types/aos": "^3.0.7",
+        "@types/fullpage.js": "^2.9.6",
         "@vitejs/plugin-vue": "^5.0.0",
         "@vue/eslint-config-prettier": "^9.0.0",
         "@vue/eslint-config-typescript": "^13.0.0",
@@ -33,6 +34,8 @@
     },
     "dependencies": {
         "aos": "^2.3.4",
+        "fullpage.js": "^4.0.31",
+        "swiper": "^11.1.15",
         "vue-i18n": "^10.0.5"
     }
 }
