--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -21,3 +21,13 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 autorestart=true
 startretries=0
+
+[program:laravel-worker]
+process_name=%(program_name)s_%(process_num)02d
+directory=/var/www/app/
+command=php artisan inertia:start-ssr
+autostart=true
+autorestart=true
+user=root
+numprocs=8
+redirect_stderr=true
