--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -26,8 +26,6 @@ startretries=0
 process_name=%(program_name)s_%(process_num)02d
 directory=/var/www/app/
 command=php artisan inertia:start-ssr
-autostart=true
-autorestart=true
 user=root
-numprocs=8
-redirect_stderr=true
+stderr_logfile=/var/log/laravel-worker.err.log
+stdout_logfile=/var/log/laravel-worker.out.log
