--- a/docker/supervisord.conf
+++ b/docker/supervisord.conf
@@ -29,3 +29,13 @@ command=php artisan inertia:start-ssr
 user=root
 stderr_logfile=/var/log/laravel-worker.err.log
 stdout_logfile=/var/log/laravel-worker.out.log
+
+[program:laravel-worker]
+process_name=%(program_name)s_%(process_num)02d
+directory=/var/www/app/
+command=php artisan queue:work
+user=root
+stderr_logfile=/var/log/laravel-worker.err.log
+stdout_logfile=/var/log/laravel-worker.out.log
+autorestart=true
+startretries=0
