--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,6 +1,6 @@
 server {
-	listen [::]:8080 default_server;
-    listen 8080 default_server;
+	listen [::]:8080 fpt-doanhnghiep.com;
+    listen 8080 fpt-doanhnghiep.com;
     server_name _;
 	index index.php index.html;
 	error_log /var/log/nginx/error.log;
@@ -28,4 +28,9 @@ server {
 		try_files $uri $uri/ /index.php?$query_string;
 		gzip_static on;
 	}
+}
+server {
+    listen 8080 default_server;
+    server_name _;
+    return 444;
 }
