--- a/docker/nginx/conf.d/default.conf
+++ b/docker/nginx/conf.d/default.conf
@@ -1,36 +1,38 @@
 server {
-	listen [::]:8080 fpt-doanhnghiep.com;
-    listen 8080 fpt-doanhnghiep.com;
-    server_name _;
-	index index.php index.html;
-	error_log /var/log/nginx/error.log;
-	access_log /var/log/nginx/access.log;
-	proxy_set_header X-Real-IP  $remote_addr;
-	proxy_set_header X-Forwarded-For $remote_addr;
-	proxy_pass_header X-Inertia;
-	root /var/www/app/public;
+    listen 8080;
+    listen [::]:8080;
+    server_name fpt-doanhnghiep.com;  # Chỉ cho phép domain này
 
-	add_header 'Access-Control-Allow-Origin' '*' always;
-	add_header 'Access-Control-Allow-Methods' '*' always;
-	add_header 'Access-Control-Allow-Headers' '*' always;
-	add_header Content-Security-Policy "upgrade-insecure-requests;";
-	
-	location ~ \.php$ {
-		try_files $uri =404;
-		fastcgi_split_path_info ^(.+\.php)(\.+)$;
-		fastcgi_pass unix:/run/php-fpm.sock;
-		fastcgi_index index.php;
-		include fastcgi_params;
-		fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-		fastcgi_param PATH_INFO $fastcgi_path_info;
-	}
-	location / {
-		try_files $uri $uri/ /index.php?$query_string;
-		gzip_static on;
-	}
-}
-server {
-    listen 8080 default_server;
-    server_name _;
-    return 444;
-}
+    index index.php index.html;
+    error_log /var/log/nginx/error.log;
+    access_log /var/log/nginx/access.log;
+
+    # Các header cho proxy nếu bạn đang dùng reverse proxy
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $remote_addr;
+    proxy_pass_header X-Inertia;
+
+    # Cấu hình thư mục gốc và các header cho CORS, CSP
+    root /var/www/app/public;
+
+    add_header 'Access-Control-Allow-Origin' '*' always;
+    add_header 'Access-Control-Allow-Methods' '*' always;
+    add_header 'Access-Control-Allow-Headers' '*' always;
+    add_header Content-Security-Policy "upgrade-insecure-requests;";
+
+    # Xử lý PHP
+    location ~ \.php$ {
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(\.+)$;
+        fastcgi_pass unix:/run/php-fpm.sock;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+    }
+
+    # Cấu hình cho các URL khác
+    location / {
+        try_files $uri $uri/ /index.php?$query_string;
+        gzip_static on;
+    }
